...
            android:contentDescription="@string/previous"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/duration"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:text="@string/duration"
            android:textColor="@color/darkGray"
            style="@style/defaultFont.click"
            app:layout_constraintTop_toBottomOf="@id/condition"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/fromDuration"
            android:text="@string/memoDateFrom"
            android:clickable="true"
            android:visibility="gone"
            style="@style/duration"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/toDuration"
            app:layout_constraintHorizontal_weight="1"
            />

        <TextView
            android:id="@+id/toDuration"
            android:text="@string/memoDateTo"
...
                android:id="@+id/radioNewest"
                android:text="@string/newest"
                android:background="@color/green"
                style="@style/defaultFont.radio"
                />
            <RadioButton
                android:id="@+id/radioOldest"
                android:text="@string/oldest"
                android:background="@drawable/memo_writing"
                style="@style/defaultFont.radio"/>
        </RadioGroup>

        <TextView
...
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/count"
            style="@style/defaultFont"
            app:layout_constraintTop_toBottomOf="@id/radioGroupSort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/editCount"
            />

        <EditText
            android:id="@+id/editCount"
            android:layout_width="0dp"
            android:layout_height="48dp"
...
            app:layout_constraintTop_toBottomOf="@id/radioGroupSort"
            app:layout_constraintStart_toEndOf="@id/textCount"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/green"
            android:text="@string/search"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/editCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonInit"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonInit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
